# transfold

./: .checksum.md5  .gitignore  Makefile  README.md  TODO.md  checksum.md5  environment.yaml  mccaskill.py  md5_repo  pyproject.toml  setup.py  transfold.md5  transfold.py
data/CDS/a.1.1.1/2gkm/data/: data_report.jsonl  dataset_catalog.json
demo/: structure_visualisation.ipynb
envs/: msc.yaml
modules/: downloaders.py  mccaskill.py  scope_parser.py  scopes_parser.py
scripts/: mccaskill.py
spiders/spiders/spiders/: frabase.py
tests/: test_downloaders.py  test_logger.py  test_mccaskill.py  test_scope_parser.py  test_scopes_parser.py
tests/data/: test_scope.tsv  test_scopes.tsv
tests/data/test_sequence_data/a.1.1.1/1ux8/data/: data_report.jsonl  gene.fna
tests/data/test_sequence_data/a.1.1.1/2gkm/data/: gene.fna
tests/data/test_sequence_data/a.1.1.1/2gl3/data/: dataset_catalog.json
tests/data/test_sequence_data/a.1.1.2/1idr/data/: gene.fna
tests/data/test_structure_data/a.1.1.1/1ux8/gene/: structure_0.pickle  structure_1.json  structure_1.pickle
tests/data/test_structure_data/a.1.1.1/2gkm/gene/: structure_0.pickle
tests/data/test_structure_data/a.1.1.1/2gl3/gene/: structure_0.pickle
tests/data/test_structure_data/a.1.1.2/1idr/gene/: structure_0.pickle
transfold/: transfold.py
transfold/modules/: downloaders.py  logger.py  mccaskill.py  scope_parser.py
