[project]
name = "transfold"
dynamic = ["version"]
authors = [{ name = "Filip Hajdyła", email = "hajdylaf@gmail.com" }]
description = "A tool to predict protein folding using transcript structure"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: Debian 11",
]
dependencies = [
    "click",
    "numpy",
    "pandas",
    "tqdm",
    "requests",
    "rich",
    "biopython",
]

[project.urls]
Homepage = "https://github.com/f1lem0n/transfold"
Issues = "https://github.com/f1lem0n/transfold/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["transfold", "transfold.modules", "transfold.data"]

[project.scripts]
transfold = "transfold.transfold:cli"

[tool.setuptools.package-data]
transfold = ["data/*.tsv", "info"]
